--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "social network for developpers",
   "main": "server.js",
   "scripts": {
+    "build": "cd client && run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild":"npm run install-client && npm run build",
     "start": "node server",
-    "server":"nodemon server"
+    "server":"nodemon server",
+    "client":"npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Sabri TANICH",
   "license": "MIT",
