--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "social network for developpers",
   "main": "server.js",
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "build": "cd client && run build",
     "install-client": "cd client && npm install",
@@ -11,6 +15,7 @@
     "server":"nodemon server",
     "client":"npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
+    
   },
   "author": "Sabri TANICH",
   "license": "MIT",
@@ -28,4 +33,6 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
+
+
 }
