--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "1.0.0",
   "description": "social network for developpers",
   "main": "server.js",
-  "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
-  },
+  
   "scripts": {
-    "build": "cd client && run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild":"npm run install-client && npm run build",
+
+    "heroku-postbuild":"cd client && npm install && npm run build",
     "start": "node server",
     "server":"nodemon server",
     "client":"npm start --prefix client",
@@ -32,7 +28,10 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
-  }
+  },
 
+  "engines": {
+    "node": "12.16.1"
+  }
 
 }
