--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "1.0.0",
   "description": "social network for developpers",
   "main": "server.js",
-  
   "scripts": {
-
-    "heroku-postbuild":"cd client && npm install && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "start": "node server",
-    "server":"nodemon server",
-    "client":"npm start --prefix client",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
-    
   },
   "author": "Sabri TANICH",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.2",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
@@ -29,9 +27,7 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   },
-
   "engines": {
     "node": "12.16.1"
   }
-
 }
