--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.10",
     "moment": "^2.27.0",
     "react": "^16.13.1",
