--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
